[package]
name = "shellcode_loader"
version = "0.1.0"
authors = ["Pegleg <pegleg@linux.com>"]
edition = "2018"

[dependencies]
libc = { version = "*"}

[profile.release]
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[[bin]]
name = "shellcode_loader"
path = "src/main.rs"

[[bin]]
name = "payload"
path = "src/payload.rs"
