cargo-features = ["strip"]

[package]
name = "shellcode_loader"
version = "0.1.0"
authors = ["Pegleg <pegleg@linux.com>"]
edition = "2018"



[profile.release]
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = "symbols"
lto = true

[[bin]]
name = "shellcode_loader"
path = "src/main.rs"

[[bin]]
name = "payload"
path = "src/payload.rs"
